<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group  android:id="@+id/group1"
        android:checkableBehavior="none">

        <item android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about"/>

        <item android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help"/>

        <item android:id="@+id/nav_policy"
            android:icon="@drawable/ic_policy"
            android:title="@string/menu_policy"/>

    </group>

    <group  android:id="@+id/group2"
        android:checkableBehavior="none">

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"/>

    </group>

    <group android:id="@+id/group3"
        android:checkableBehavior="none">

        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"/>
    </group>

</menu>
