<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notification.NotificationsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" android:id="@+id/emptyMessageLayout">

        <ImageView
            android:src="@drawable/circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messagesImageView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messagesTitleTextView" android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/messagesSubtitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/messagesImageView" android:layout_marginTop="24dp"
            android:text="@string/notification_empty_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messagesSubtitleTextView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/notification_empty_subtitle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>